fix: Resource filter vertical alignment.

--- a/app/stylesheets/alchemy/admin/filters.scss
+++ b/app/stylesheets/alchemy/admin/filters.scss
@@ -4,13 +4,15 @@ div#sorting_select {
 }
 
 .filter-input {
+  display: flex;
+  flex-direction: column;
   margin: var(--spacing-2) 0;
 
   label:not(:has(input[type="checkbox"])) {
     display: block;
     font-weight: var(--font-weight_semibold);
     font-size: var(--font-size_medium);
-    margin-bottom: var(--spacing-2);
+    margin-bottom: var(--spacing-1);
   }
 
   label:has(input[type="checkbox"]) {
